@@ -55,7 +55,8 @@ nav:
     - AWK: page/lsp-awk.md
     - Bash: page/lsp-bash.md
     - Beancount: page/lsp-beancount.md
-    - Buf/Protocol Buffers: page/lsp-bufls.md
+    - Buf/Protocol Buffers (Buf CLI): page/lsp-buf.md
+    - Buf/Protocol Buffers (Buf Language Server): page/lsp-bufls.md
     - Camel: page/lsp-camel.md
     - C++ (ccls): page/lsp-ccls.md
     - C++ (clangd): page/lsp-clangd.md
